--- a/index.html
+++ b/index.html
@@ -160,5 +160,58 @@
 	</center>
 	<!-- This template was originally made by <a href="http://web.mit.edu/phillipi/">Phillip Isola</a> and <a href="http://richzhang.github.io/">Richard Zhang</a> for a <a href="http://richzhang.github.io/colorization/">colorful</a> ECCV project; the code can be found <a href="https://github.com/richzhang/webpage-template">here</a>. -->
 <br>
+
+<hr> 
+
+<table align=center width=850px>
+	<center><h1>Abstract</h1></center>
+	<tr>
+		<td>
+			A voice's gender is considered to be dictated by one's biology and cultural situation. Without modification, this determinism results in colinearity between acoustic metrics, making disentangling a metric's contribution to gender perception difficult. To study disentanglement on natural speech, we collaborate with a gender-affirming voice teacher to collect the Disentangled Source-Filter Dataset (DSFD): 45-minutes of audio along 25 Pitch, Resonance, and Weight voice configurations, coupled with Electroglottograph (EGG) measurements. Our analysis demonstrates certain acoustic and physical metrics, namely avg. $F_0$, $\Delta F$, Contact Quotient (CQ), and Loudness correlate with Pitch, Resonance, and Weight. Going on to perform perceptual studies of gender, naturalness, and realness, we see that $\Delta F$ is the strongest predictor of perceived gender. Perceived naturalness and realness of a voice, however, prove to be unpredictable by these acoustic metrics.
+		</td>
+	</tr>
+</table>
+<br>
+
+<table class="demotable" width=850px>
+	<center><h1>Samples</h1></center>
+	<center><p>Here are a few samples from the DSFD, alongside Speaker Acoustic, Physical, and Perceptual Measurements
+	</p></center>
+</table>
+
+<table>
+	<center><h3>High Pitch, High Resonance, Low Weight (L1-Distance = 0)</h3></center>
+	<tr>
+		<th>Utterance</th>
+		<th>F0</th>
+		<th>Delta-F</th>
+		<th>CQ</th>
+		<th>Gender</th>
+		<th>Realness</th>
+	</tr>
+	
+	<tr>
+		<td>/a/</td>
+		<td><audio controls><source src="./resources/audios/dsfd/001/high-high-low/aa.wav" type="audio/wav"></audio></td>
+		<td>100 Hz</td>
+		<td>100 Hz</td>
+		<td>0.25</td>
+		<td> - </td>
+		<td> - </td>
+	</tr>
+
+	<tr>
+		<td>This was easy for us.</td>
+		<td><audio controls><source src="./resources/audios/dsfd/001/high-high-low/sent_1.wav" type="audio/wav"></audio></td>
+	</tr>
+
+
+	<tr>
+		<td>Is this seesaw safe?</td>
+		<td><audio controls><source src="./resources/audios/dsfd/001/high-high-low/sent_2.wav" type="audio/wav"></audio></td>
+	</tr>
+
+</table>
+
 </body>
 </html>
