Filling in values

--- a/index.html
+++ b/index.html
@@ -180,22 +180,22 @@
 </table>
 
 <table>
-	<center><h3>High Pitch, High Resonance, Low Weight (L1-Distance = 0)</h3></center>
+	<center><h3>High Pitch, High Resonance, Low Weight</h3></center>
 	<tr>
 		<th>Utterance</th>
 		<th>F0</th>
 		<th>Delta-F</th>
 		<th>CQ</th>
-		<th>Gender</th>
-		<th>Realness</th>
+		<th>Gender (Avg. Scalar Rating)</th>
+		<th>Realness (Real Votes / Total Votes)</th>
 	</tr>
 	
 	<tr>
 		<td>/a/</td>
 		<td><audio controls><source src="./resources/audios/dsfd/001/high-high-low/aa.wav" type="audio/wav"></audio></td>
-		<td>100 Hz</td>
-		<td>100 Hz</td>
-		<td>0.25</td>
+		<td>284 Hz</td>
+		<td>1147 Hz</td>
+		<td>0.26</td>
 		<td> - </td>
 		<td> - </td>
 	</tr>
@@ -203,12 +203,22 @@
 	<tr>
 		<td>This was easy for us.</td>
 		<td><audio controls><source src="./resources/audios/dsfd/001/high-high-low/sent_1.wav" type="audio/wav"></audio></td>
+		<td>132.4 Hz</td>
+		<td>1175 Hz</td>
+		<td>0.44</td>
+		<td> 8.76 </td>
+		<td> 0.70 </td>
 	</tr>
 
 
 	<tr>
 		<td>Is this seesaw safe?</td>
 		<td><audio controls><source src="./resources/audios/dsfd/001/high-high-low/sent_2.wav" type="audio/wav"></audio></td>
+		<td>198 Hz</td>
+		<td>1120 Hz</td>
+		<td>0.47</td>
+		<td> 9.20 </td>
+		<td> 0.46 </td>
 	</tr>
 
 </table>
