--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
 	<center><h3>High Pitch, High Resonance, Low Weight</h3></center>
 	<tr>
 		<th>Utterance</th>
+		<th>Audio</th>
 		<th>F0</th>
 		<th>Delta-F</th>
 		<th>CQ</th>
