--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 	
 	<tr>
 		<td>/a/</td>
-		<td><audio controls><source src="./resources/audios/dsfd/001/high-high-low/aa.wav" type="audio/wav"></audio></td>
+		<td><audio controls><source src="./resources/audios/dsfd/high-high-low/aa.wav" type="audio/wav"></audio></td>
 		<td>284 Hz</td>
 		<td>1147 Hz</td>
 		<td>0.26</td>
@@ -203,7 +203,7 @@
 
 	<tr>
 		<td>This was easy for us.</td>
-		<td><audio controls><source src="./resources/audios/dsfd/001/high-high-low/sent_1.wav" type="audio/wav"></audio></td>
+		<td><audio controls><source src="./resources/audios/dsfd/high-high-low/sent_1.wav" type="audio/wav"></audio></td>
 		<td>132.4 Hz</td>
 		<td>1175 Hz</td>
 		<td>0.44</td>
@@ -214,12 +214,148 @@
 
 	<tr>
 		<td>Is this seesaw safe?</td>
-		<td><audio controls><source src="./resources/audios/dsfd/001/high-high-low/sent_2.wav" type="audio/wav"></audio></td>
+		<td><audio controls><source src="./resources/audios/dsfd/high-high-low/sent_2.wav" type="audio/wav"></audio></td>
 		<td>198 Hz</td>
 		<td>1120 Hz</td>
 		<td>0.47</td>
 		<td> 9.20 </td>
 		<td> 0.46 </td>
+	</tr>
+
+</table>
+
+
+<table>
+	<center><h3>Low Pitch, Low Resonance, High Weight</h3></center>
+	<tr>
+		<th>Utterance</th>
+		<th>Audio</th>
+		<th>F0</th>
+		<th>Delta-F</th>
+		<th>CQ</th>
+		<th>Gender (Avg. Scalar Rating)</th>
+		<th>Realness (Real Votes / Total Votes)</th>
+	</tr>
+	
+	<tr>
+		<td>/a/</td>
+		<td><audio controls><source src="./resources/audios/dsfd/low-low-high/aa.wav" type="audio/wav"></audio></td>
+		<td>146 Hz</td>
+		<td>1027 Hz</td>
+		<td>0.54</td>
+		<td> - </td>
+		<td> - </td>
+	</tr>
+
+	<tr>
+		<td>This was easy for us.</td>
+		<td><audio controls><source src="./resources/audios/dsfd/low-low-high/sent_1.wav" type="audio/wav"></audio></td>
+		<td>116 Hz</td>
+		<td>1007 Hz</td>
+		<td>0.47</td>
+		<td> 3.45 </td>
+		<td> 0.84 </td>
+	</tr>
+
+
+	<tr>
+		<td>Is this seesaw safe?</td>
+		<td><audio controls><source src="./resources/audios/dsfd/low-low-high/sent_2.wav" type="audio/wav"></audio></td>
+		<td>109 Hz</td>
+		<td>1055 Hz</td>
+		<td>0.52</td>
+		<td> 3.00 </td>
+		<td> 0.75 </td>
+	</tr>
+
+</table>
+
+<table>
+	<center><h3>Low Pitch, Low Resonance, Low Weight</h3></center>
+	<tr>
+		<th>Utterance</th>
+		<th>Audio</th>
+		<th>F0</th>
+		<th>Delta-F</th>
+		<th>CQ</th>
+		<th>Gender (Avg. Scalar Rating)</th>
+		<th>Realness (Real Votes / Total Votes)</th>
+	</tr>
+	
+	<tr>
+		<td>/a/</td>
+		<td><audio controls><source src="./resources/audios/dsfd/low-low-low/aa.wav" type="audio/wav"></audio></td>
+		<td>156 Hz</td>
+		<td>951 Hz</td>
+		<td>0.27</td>
+		<td> - </td>
+		<td> - </td>
+	</tr>
+
+	<tr>
+		<td>This was easy for us.</td>
+		<td><audio controls><source src="./resources/audios/dsfd/low-low-low/sent_1.wav" type="audio/wav"></audio></td>
+		<td> 125 Hz</td>
+		<td> 933 Hz</td>
+		<td>0.40</td>
+		<td> 8.76 </td>
+		<td> 0.70 </td>
+	</tr>
+
+
+	<tr>
+		<td>Is this seesaw safe?</td>
+		<td><audio controls><source src="./resources/audios/dsfd/low-low-low/sent_2.wav" type="audio/wav"></audio></td>
+		<td>132 Hz</td>
+		<td> 1078 Hz</td>
+		<td>0.40</td>
+		<td> 9.20 </td>
+		<td> 0.46 </td>
+	</tr>
+
+</table>
+
+<table>
+	<center><h3>Medium Pitch, Medium Resonance, Low Weight</h3></center>
+	<tr>
+		<th>Utterance</th>
+		<th>Audio</th>
+		<th>F0</th>
+		<th>Delta-F</th>
+		<th>CQ</th>
+		<th>Gender (Avg. Scalar Rating)</th>
+		<th>Realness (Real Votes / Total Votes)</th>
+	</tr>
+	
+	<tr>
+		<td>/a/</td>
+		<td><audio controls><source src="./resources/audios/dsfd/med-med-low/aa.wav" type="audio/wav"></audio></td>
+		<td>218 Hz</td>
+		<td>1096 Hz</td>
+		<td>0.42</td>
+		<td> - </td>
+		<td> - </td>
+	</tr>
+
+	<tr>
+		<td>This was easy for us.</td>
+		<td><audio controls><source src="./resources/audios/dsfd/med-med-low/sent_1.wav" type="audio/wav"></audio></td>
+		<td>159 Hz</td>
+		<td>1117 Hz</td>
+		<td>0.40</td>
+		<td> 8.94 </td>
+		<td> 1.0 </td>
+	</tr>
+
+
+	<tr>
+		<td>Is this seesaw safe?</td>
+		<td><audio controls><source src="./resources/audios/dsfd/med-med-low/sent_2.wav" type="audio/wav"></audio></td>
+		<td>166 Hz</td>
+		<td>1097 Hz</td>
+		<td>0.43</td>
+		<td> 9.12 </td>
+		<td> 0.63 </td>
 	</tr>
 
 </table>
