--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
 <table class="demotable" width=850px>
 	<center><h1>Samples</h1></center>
-	<center><p>Here are a few samples from the DSFD, alongside Speaker Acoustic, Physical, and Perceptual Measurements
+	<center><p>Here are a few samples from the DSFD, alongside utterance-specific Speaker Acoustic, Physical, and Perceptual Measurements. Inter-utterance variation, and moving between sustained phonation and read speech, reveals difficulties of performing analysis over single utterances.
 	</p></center>
 </table>
 
